@@ -1,17 +1,66 @@
 plugins {
-    id 'airbyte-java-connector'
+    id 'application'
+    id 'airbyte-bulk-connector'
+    //id 'java-test-fixtures'
 }
 
-airbyteJavaConnector {
-    cdkVersionRequired = '0.45.0'
-    features = ['db-destinations']
-    useLocalCdk = true
+airbyteBulkConnector {
+    core = 'load'
+    toolkits = []
+    cdk = 'local'
 }
 
 application {
-    mainClass = 'io.airbyte.integrations.destination.dev_null.TestingDestinations'
+    mainClass = 'io.airbyte.integrations.destination.dev_null.DevNullDestination'
     applicationDefaultJvmArgs = ['-XX:+ExitOnOutOfMemoryError', '-XX:MaxRAMPercentage=75.0']
+
+    // Uncomment and replace to run locally
+    //applicationDefaultJvmArgs = ['-XX:+ExitOnOutOfMemoryError', '-XX:MaxRAMPercentage=75.0', '--add-opens', 'java.base/java.lang=ALL-UNNAMED']
 }
 
-dependencies {
-}
+// Uncomment to run locally
+//run {
+//    standardInput = System.in
+//}
+
+//kotlin {
+//    sourceSets {
+//        // Existing source sets like 'main' and 'test' are configured automatically
+//        testIntegration {
+//            kotlin.srcDir 'src/test-integration/kotlin'
+//            resources.srcDir 'src/test-integration/resources'
+//        }
+//    }
+//}
+//
+//sourceSets {
+//    testIntegration {
+//        compileClasspath += sourceSets.main.output + sourceSets.testFixtures.output
+//        runtimeClasspath += sourceSets.main.output + sourceSets.testFixtures.output
+//    }
+//}
+//
+//configurations {
+//    integrationTestImplementation.extendsFrom testImplementation
+//    integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
+//}
+
+//task integrationTest(type: Test) {
+//    description = 'Runs the integration tests.'
+//    group = 'verification'
+//    testClassesDirs = sourceSets.testIntegration.output.classesDirs
+//    classpath = sourceSets.testIntegration.runtimeClasspath
+//    shouldRunAfter test
+//}
+
+//check.dependsOn integrationTest
+//
+//dependencies {
+//    implementation project(':airbyte-cdk:bulk:core:bulk-cdk-core-load')
+//    implementation project(':airbyte-cdk:bulk:core:bulk-cdk-core-base')
+//
+//    testImplementation project(':airbyte-cdk:bulk:core:bulk-cdk-core-load')
+//    testImplementation project(':airbyte-cdk:bulk:core:bulk-cdk-core-base')
+//    testImplementation(testFixtures(project(":airbyte-cdk:bulk:core:bulk-cdk-core-load")))
+//    testImplementation(testFixtures(project(":airbyte-cdk:bulk:core:bulk-cdk-core-base")))
+//}
